--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,20 +4,17 @@ on:
     branches:
       - main
 jobs:
-  test:
-    name: Test app
-    runs-on: ubuntu-latest
-    steps:
-      - name: run go test
-        run: |
-          "go test ./..."
-  deploy:
+  test-and-deploy:
     name: Deploy app
     runs-on: ubuntu-latest
     needs: test
     steps:
-      # This step checks out a copy of your repository.
       - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version: "1.20"
+      - run: |
+          "go test ./..."
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --remote-only
         env:
