--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,16 +4,25 @@ on:
     branches:
       - main
 jobs:
-  test-and-deploy:
-    name: Deploy app
+  test:
+    name: test app
+    runs-on: ubuntu-latest
+    container:
+      image: golang:alpine
+    steps:
+      - uses: actions/checkout@v3
+      - run: apk add --update chromium && apk add build-base
+      - run: |
+          go version
+      - run: |
+          go test ./...
+
+  deploy:
+    needs: test
+    name: deploy app
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
-        with:
-          go-version: "1.20"
-      - run: |
-          "go test ./..."
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --remote-only
         env:
